# TiledMapLoader

./: CMakeLists.txt
.github/workflows/: ci.yml
assets/: tileset x1.tsx
data/tiledMapFiles/: level1.json  level1.tmx  level2.tmx  newLevel1.json  props and items x1.tsx  tileset x1..tsx  ultimate_test.json
src/: main.cpp
src/components/: CAnimation.hpp  CBoundingBox.hpp  CEnemy.hpp  CInput.hpp  CName.hpp  CPlayer.hpp  CPosition.hpp  CRender.hpp  CScale.hpp  CState.hpp  CTile.hpp  CVelocity.hpp
src/core/: Map.hpp  Tile.hpp  Tileset.cpp  Tileset.hpp  app.cpp  app.hpp
src/utils/: util.cpp  util.hpp
